test img search -3

--- a/templates/mic.html
+++ b/templates/mic.html
@@ -221,7 +221,7 @@ if (!('webkitSpeechRecognition' in window)) {
     final_transcript = capitalize(final_transcript);
     final_span.innerHTML = linebreak(final_transcript);
     console.log("SUCCESS RECOGNITION")
-    var keyword = linebreak(final_transcript))
+    var keyword = linebreak(final_transcript)
     $(function(keyword=keyword)) {
         var params = {
             // Request parameters
