test img search -5

--- a/templates/mic.html
+++ b/templates/mic.html
@@ -222,7 +222,7 @@ if (!('webkitSpeechRecognition' in window)) {
     final_span.innerHTML = linebreak(final_transcript);
     console.log("SUCCESS RECOGNITION");
     var keyword = linebreak(final_transcript);
-    $(function(keyword=keyword)) {
+    $(function myfunc(keyword=keyword)) {
         var params = {
             // Request parameters
             "q": keyword,
