--- a/templates/mic.html
+++ b/templates/mic.html
@@ -32,7 +32,9 @@
     <img id="start_img" src="mic.gif" alt="Start"></button>
 </div>
 <div id="results">
-  <img id ="myimg" style="width : 200px;" src="" alt="">
+  <img id ="myimg-1" style="width : 200px;" src="" alt="">
+  <img id ="myimg=2" style="width : 200px;" src="" alt="">
+  <img id ="myimg-3" style="width : 200px;" src="" alt="">
   <span id="final_span" class="final"></span>
   <span id="interim_span" class="interim"></span>
   <p>
@@ -249,12 +251,14 @@ function voiceToImg(keyword) {
         data: "{body}",
     })
     .done(function(data) {
-        alert("success");
+        // alert("success");
         console.log(data.value[1].contentUrl);
-        document.getElementById("myimg").src = data.value[1].contentUrl;
+        document.getElementById("myimg-1").src = data.value[1].contentUrl;
+        document.getElementById("myimg-2").src = data.value[2].contentUrl;
+        document.getElementById("myimg-3").src = data.value[3].contentUrl;
     })
     .fail(function() {
-        alert("error");
+        // alert("error");
     });
 }
 
