--- a/templates/mic.html
+++ b/templates/mic.html
@@ -33,7 +33,7 @@
 </div>
 <div id="results">
   <img id ="myimg-1" style="width : 200px;" src="" alt="">
-  <img id ="myimg=2" style="width : 200px;" src="" alt="">
+  <img id ="myimg-2" style="width : 200px;" src="" alt="">
   <img id ="myimg-3" style="width : 200px;" src="" alt="">
   <span id="final_span" class="final"></span>
   <span id="interim_span" class="interim"></span>
