--- a/templates/mic.html
+++ b/templates/mic.html
@@ -356,19 +356,22 @@ function showButtons(style) {
   email_info.style.display = 'none';
 }
 myimg_1.onclick = function() {
-    document.getElementById("final_img") = document.getElementById("myimg_1").src;
+    var imgsrc = document.getElementById("myimg_1").src;
+    document.getElementById("final_img") = imgsrc;
     document.getElementById("img_results").style.display = "none";
 
     alert( 'Спасибо 1' );
   };
 myimg_2.onclick = function() {
-    document.getElementById("final_img") = document.getElementById("myimg_2").src;
+    var imgsrc = document.getElementById("myimg_2").src;
+    document.getElementById("final_img") = imgsrc;
     document.getElementById("img_results").style.display = "none";
 
   alert( 'Спасибо 2' );
 };
 myimg_3.onclick = function() {
-    document.getElementById("final_img") = document.getElementById("myimg_3").src;
+    var imgsrc = document.getElementById("myimg_3").src;
+    document.getElementById("final_img") = imgsrc;
     document.getElementById("img_results").style.display = "none";
 
   alert( 'Спасибо 3' );
