test img pick-4

--- a/templates/mic.html
+++ b/templates/mic.html
@@ -357,21 +357,21 @@ function showButtons(style) {
 }
 myimg_1.onclick = function() {
     var imgsrc = document.getElementById("myimg_1").src;
-    document.getElementById("final_img") = imgsrc;
+    document.getElementById("final_img").src = imgsrc;
     document.getElementById("img_results").style.display = "none";
 
     alert( 'Спасибо 1' );
   };
 myimg_2.onclick = function() {
     var imgsrc = document.getElementById("myimg_2").src;
-    document.getElementById("final_img") = imgsrc;
+    document.getElementById("final_img").src = imgsrc;
     document.getElementById("img_results").style.display = "none";
 
   alert( 'Спасибо 2' );
 };
 myimg_3.onclick = function() {
     var imgsrc = document.getElementById("myimg_3").src;
-    document.getElementById("final_img") = imgsrc;
+    document.getElementById("final_img").src = imgsrc;
     document.getElementById("img_results").style.display = "none";
 
   alert( 'Спасибо 3' );
