test img pick-5

--- a/templates/mic.html
+++ b/templates/mic.html
@@ -37,7 +37,7 @@
       <img id ="myimg_2" style="width : 200px;" src="" alt="">
       <img id ="myimg_3" style="width : 200px;" src="" alt="">
   </div>
-  <img src="final_img" src="" alt="">
+  <img id="final_img" src="final_img" src="" alt="">
   <span id="final_span" class="final"></span>
   <span id="interim_span" class="interim"></span>
   <p>
