test img pick-6

--- a/templates/mic.html
+++ b/templates/mic.html
@@ -32,7 +32,7 @@
     <img id="start_img" src="mic.gif" alt="Start"></button>
 </div>
 <div id="results">
-  <div class="img_results">
+  <div class="img_results" id="img_results">
       <img id ="myimg_1" style="width : 200px;" src="" alt="">
       <img id ="myimg_2" style="width : 200px;" src="" alt="">
       <img id ="myimg_3" style="width : 200px;" src="" alt="">
