--- a/templates/mic.html
+++ b/templates/mic.html
@@ -33,9 +33,9 @@
 </div>
 <div id="results">
   <div class="img_results" id="img_results">
-      <img id ="myimg_1" style="width : 200px;" src="" alt="">
-      <img id ="myimg_2" style="width : 200px;" src="" alt="">
-      <img id ="myimg_3" style="width : 200px;" src="" alt="">
+      <img id ="myimg_1" class="img" src="" alt="">
+      <img id ="myimg_2" class="img" src="" alt="">
+      <img id ="myimg_3" class="img" src="" alt="">
   </div>
   <img id="final_img" src="final_img" src="" alt="">
   <span id="final_span" class="final"></span>
