--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,6 +46,11 @@
   .right {
     float: right;
   }
+  
+  .display-none {
+      display: none;
+  }
+
   .sidebyside {
     display: none;
     width: 45%;
