--- a/templates/mic.html
+++ b/templates/mic.html
@@ -59,7 +59,7 @@
   <p>
 
 <!-- SELECT LANGUAGE -->
-  <div id="div_language">
+  <div id="div_language" class="display-none">
     <select id="select_language" onchange="updateCountry()"></select>
     &nbsp;&nbsp;
     <select id="select_dialect"></select>
