--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
     <select id="select_dialect"></select>
   </div>
 </div>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="../static/js/script.js"></script>
 <!-- <script >
 var langs =
 [['Afrikaans',       ['af-ZA']],
