--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,17 @@
 <head>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <link rel="stylesheet" href="../static/css/style.css">
+    <script src="https://aframe.io/releases/0.4.0/aframe.min.js"></script>
+    <script src="http://rawgit.com/dbradleyfl/aframe-gridhelper/master/dist/aframe-gridhelper-component.min.js"></script>
 </head>
 
 <h1 class="center" id="headline">VR ideas</h1>
+
+<!-- A-FRAME PART -->
+<a-scene gridhelper>
+<a-entity geometry="primitive: box" material="color: #C03546"></a-entity>
+</a-scene>
+
 <div id="info">
   <p id="info_start">Click on the microphone icon and begin speaking.</p>
   <p id="info_speak_now">Speak now.</p>
