--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <script src="http://rawgit.com/dbradleyfl/aframe-gridhelper/master/dist/aframe-gridhelper-component.min.js"></script>
 </head>
 
-<h1 class="center" id="headline">VR ideas</h1>
+<!-- <h1 class="center" id="headline">VR ideas</h1> -->
 
 <!-- A-FRAME PART -->
 <a-scene>
