--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
       </a-entity>
     </a-scene>
 
-<div id="info">
+<!-- <div id="info">
   <p id="info_start">Click on the microphone icon and begin speaking.</p>
   <p id="info_speak_now">Speak now.</p>
   <p id="info_no_speech">No speech was detected. You may need to adjust your
@@ -84,7 +84,7 @@
   <p id="info_upgrade">Web Speech API is not supported by this browser.
      Upgrade to <a href="//www.google.com/chrome">Chrome</a>
      version 25 or later.</p>
-</div>
+</div> -->
 <div class="right">
   <button id="start_button" onclick="startButton(event)">
     <img id="start_img" src="../static/mic.gif" alt="Start"></button>
@@ -100,31 +100,7 @@
   <span id="interim_span" class="interim"></span>
   <p>
 </div>
-<div class="center">
-  <div class="sidebyside" style="text-align:right">
-    <button id="copy_button" class="button" onclick="copyButton()">
-      Copy and Paste</button>
-    <div id="copy_info" class="info">
-      Press Control-C to copy text.<br>(Command-C on Mac.)
-    </div>
-  </div>
-  <div class="sidebyside">
-    <button id="email_button" class="button" onclick="emailButton()">
-      Create Email</button>
-    <div id="email_info" class="info">
-      Text sent to default email application.<br>
-      (See chrome://settings/handlers to change.)
-    </div>
-  </div>
-  <p>
 
-<!-- SELECT LANGUAGE -->
-  <div id="div_language" class="display-none">
-    <select id="select_language" onchange="updateCountry()"></select>
-    &nbsp;&nbsp;
-    <select id="select_dialect"></select>
-  </div>
-</div>
 <script type="text/javascript" src="../static/js/script.js"></script>
 <!-- <script >
 var langs =
