--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@
   <p>
 </div>
 
-<script type="text/javascript" src="../static/js/script.js"></script>
+<!-- <script type="text/javascript" src="../static/js/script.js"></script> -->
 <!-- <script >
 var langs =
 [['Afrikaans',       ['af-ZA']],
