--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,10 @@
       </a-entity>
 
       <!-- FOR RECOGNITION -->
+      <a-entity id="start_button" layout="type: line; margin: 1.5" position="0 -1 -5" onclick="startButton(event)">
+        <a-text id="mytext" value="Click to start"></a-text>
+        <!-- <a-entity template="src: #link" data-src="#cubes" data-thumb="#cubes-thumb"></a-entity> -->
+      </a-entity>
 
 
       <!-- Camera + cursor. -->
