--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
           event-set__1="_event: mouseenter; color: springgreen"
           event-set__2="_event: mouseleave; color: black"
           fuse="true"
-          raycaster="objects: .link"></a-cursor>
+          raycaster="objects: .link .cube"></a-cursor>
       </a-entity>
     </a-scene>
 
