--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
 
       <!-- Image links. -->
       <a-entity id="links" layout="type: line; margin: 1.5" position="0 -1 -4">
-        <a-text id="mytext" value="Say: Hello World! to start"></a-text>
+        <a-text id="mytext" value="Say: Hello World! to start"  position="3 -1 -4"></a-text>
         <!-- <a-entity template="src: #link" data-src="#cubes" data-thumb="#cubes-thumb"></a-entity> -->
         <a-entity template="src: #link" data-src="#city" data-thumb="#city-thumb"></a-entity>
         <!-- <a-entity template="src: #link" data-src="#sechelt" data-thumb="#sechelt-thumb"></a-entity> -->
