--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
       </a-entity>
 
       <!-- FOR RECOGNITION -->
-      <a-entity id="cube" geometry="primitive: box" material="color: blue"></a-entity>
+      <!-- <a-entity id="cube" geometry="primitive: box" material="color: blue"></a-entity> -->
 
 
       <!-- <a-entity template="src: #link" id="start_button" layout="type: line; margin: 1.5" position="0 2 -5" onclick="startButton(event)">
