--- a/templates/index.html
+++ b/templates/index.html
@@ -64,13 +64,13 @@
 
       <!-- Camera + cursor. -->
       <a-entity camera look-controls>
-        <a-cursor id="cursor"
+        <!-- <a-cursor id="cursor"
           animation__click="property: scale; startEvents: click; from: 0.1 0.1 0.1; to: 1 1 1; dur: 150"
           animation__fusing="property: fusing; startEvents: fusing; from: 1 1 1; to: 0.1 0.1 0.1; dur: 1500"
           event-set__1="_event: mouseenter; color: springgreen"
           event-set__2="_event: mouseleave; color: black"
           fuse="true"
-          raycaster="objects: .link .cube"></a-cursor>
+          raycaster="objects: .link .cube"></a-cursor> -->
       </a-entity>
     </a-scene>
 
