--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
       <a-sky id="image-360" radius="10" src="#city"></a-sky>
 
       <!-- Image links. -->
-      <a-text id="mytext" class="mytext" value="Say: Hello World! to start"  position="3 -1 -4"></a-text>
+      <a-text id="mytext" class="mytext" value="Say: Hello World! to start"></a-text>
       <a-entity id="links" layout="type: line; margin: 1.5" position="0 -1 -4">
         <!-- <a-entity template="src: #link" data-src="#cubes" data-thumb="#cubes-thumb"></a-entity> -->
         <!-- <a-entity template="src: #link" data-src="#city" data-thumb="#city-thumb"></a-entity> -->
