--- a/templates/index.html
+++ b/templates/index.html
@@ -45,12 +45,13 @@
       <a-sky id="image-360" radius="10" src="#city"></a-sky>
 
       <!-- Image links. -->
-      <a-text id="mytext" class="mytext" value="Say: Hello World! to start"></a-text>
-      <a-entity id="links" layout="type: line; margin: 1.5" position="0 -1 -4">
+      <a-entity id="mytext" class="mytext" text="value: Hello World;"></a-entity>
+      <!-- <a-text id="mytext" class="mytext" value="Say: Hello World! to start"></a-text> -->
+      <!-- <a-entity id="links" layout="type: line; margin: 1.5" position="0 -1 -4"> -->
         <!-- <a-entity template="src: #link" data-src="#cubes" data-thumb="#cubes-thumb"></a-entity> -->
         <!-- <a-entity template="src: #link" data-src="#city" data-thumb="#city-thumb"></a-entity> -->
         <!-- <a-entity template="src: #link" data-src="#sechelt" data-thumb="#sechelt-thumb"></a-entity> -->
-      </a-entity>
+      <!-- </a-entity> -->
 
       <!-- FOR RECOGNITION -->
       <!-- <a-entity id="cube" geometry="primitive: box" material="color: blue"></a-entity> -->
