--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
         <img id="sechelt" crossorigin="anonymous" src="https://cdn.aframe.io/360-image-gallery-boilerplate/img/sechelt.jpg">
 
         <!-- Image link template to be reused. -->
-        <script id="link" type="text/html">
+        <!-- <script id="link" type="text/html">
           <a-entity class="link"
             geometry="primitive: plane; height: 1; width: 1"
             material="shader: flat; src: ${thumb}"
@@ -38,7 +38,7 @@
             event-set__4="_event: mouseleave; scale: 1 1 1"
             set-image="on: click; target: #image-360; src: ${src}"
             sound="on: click; src: #click-sound"></a-entity>
-        </script>
+        </script> -->
       </a-assets>
 
       <!-- 360-degree image. -->
