--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
     <script src="https://npmcdn.com/aframe-template-component@3.1.1"></script>
     <script src="../static/js/set-image.js"></script>
 </head>
-
+<body>
 <!-- <h1 class="center" id="headline">VR ideas</h1> -->
 
 <!-- A-FRAME PART -->
@@ -108,6 +108,8 @@
   <span id="interim_span" class="interim"></span>
   <p>
 </div>
+</body>
+</html>
 
 <!-- <script type="text/javascript" src="../static/js/script.js"></script> -->
 <!-- <script >
