--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
         <!-- <a-entity template="src: #link" data-src="#cubes" data-thumb="#cubes-thumb"></a-entity> -->
       <!-- </a-entity> --> -->
 
-
+      <a-entity id="speech" position="0 1 -1" text="Hello"></a-entity>
       <!-- Camera + cursor. -->
       <a-entity camera look-controls>
         <!-- <a-cursor id="cursor"
@@ -93,7 +93,7 @@
      Upgrade to <a href="//www.google.com/chrome">Chrome</a>
      version 25 or later.</p>
 </div> -->
-<div class="right">
+<!-- <div class="right">
   <button id="start_button" onclick="startButton(event)">
     <img id="start_img" src="../static/mic.gif" alt="Start"></button>
 </div>
@@ -107,7 +107,7 @@
   <span id="final_span" class="final"></span>
   <span id="interim_span" class="interim"></span>
   <p>
-</div>
+</div> -->
 </body>
 </html>
 
