--- a/templates/newlife.html
+++ b/templates/newlife.html
@@ -12,10 +12,8 @@
 <!-- <h1 class="center" id="headline">VR ideas</h1> -->
 
 <a-scene>
-
-
       <!-- Image links. -->
-      <a-text id="mytext" class="mytext" value="Hello World;"></a-text>
+      <a-text id="mytext" color="blue" class="mytext" value="Hello World;"></a-text>
       <!-- <a-text id="mytext" class="mytext" value="Say: Hello World! to start"></a-text> -->
       <!-- <a-entity id="links" layout="type: line; margin: 1.5" position="0 -1 -4"> -->
         <!-- <a-entity template="src: #link" data-src="#cubes" data-thumb="#cubes-thumb"></a-entity> -->
@@ -26,13 +24,10 @@
       <!-- FOR RECOGNITION -->
       <!-- <a-entity id="cube" geometry="primitive: box" material="color: blue"></a-entity> -->
 
-
       <!-- <a-entity template="src: #link" id="start_button" layout="type: line; margin: 1.5" position="0 2 -5" onclick="startButton(event)">
-        <!-- <a-text id="mytext"  value="Click to start"></a-text> -->
+        <a-text id="mytext"  value="Click to start"></a-text> -->
         <!-- <a-entity template="src: #link" data-src="#cubes" data-thumb="#cubes-thumb"></a-entity> -->
-      <!-- </a-entity> --> -->
-
-      <a-entity id="speech" position="0 1 -1" text="Hello"></a-entity>
+      <!-- </a-entity> -->
       <!-- Camera + cursor. -->
 
 </a-scene>
