--- a/templates/newlife.html
+++ b/templates/newlife.html
@@ -13,6 +13,7 @@
 
 <a-scene>
       <!-- Image links. -->
+      <a-sky color="#6EBAA7"></a-sky>
       <a-text id="mytext" color="blue" class="mytext" value="Hello World;"></a-text>
       <!-- <a-text id="mytext" class="mytext" value="Say: Hello World! to start"></a-text> -->
       <!-- <a-entity id="links" layout="type: line; margin: 1.5" position="0 -1 -4"> -->
