--- a/templates/newlife.html
+++ b/templates/newlife.html
@@ -14,7 +14,13 @@
 <a-scene>
       <!-- Image links. -->
       <a-sky color="#6EBAA7"></a-sky>
-      <a-text id="mytext" color="blue" class="mytext" value="Hello World;"></a-text>
+      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+      <a-sky color="#ECECEC"></a-sky>
+      <a-entity position="0 0 0"><a-text id="mytext" color="blue" class="mytext" value="Hello World;"></a-text></a-entity>
+
       <!-- <a-text id="mytext" class="mytext" value="Say: Hello World! to start"></a-text> -->
       <!-- <a-entity id="links" layout="type: line; margin: 1.5" position="0 -1 -4"> -->
         <!-- <a-entity template="src: #link" data-src="#cubes" data-thumb="#cubes-thumb"></a-entity> -->
