--- a/templates/newlife.html
+++ b/templates/newlife.html
@@ -13,6 +13,10 @@
 
 <a-scene>
       <!-- Image links. -->
+      <a-image id="myimg_1" src=""></a-image>
+      <a-image id="myimg_2" src=""></a-image>
+      <a-image id="myimg_3" src=""></a-image>
+      <a-entity mixin="marker" position="-2.5 0.7 0.01" rotation="" scale="" visible="" geometry="" material=""></a-entity>
       <a-sky color="#6EBAA7"></a-sky>
       <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
