--- a/templates/newlife.html
+++ b/templates/newlife.html
@@ -13,7 +13,7 @@
 
 <a-scene>
       <!-- Image links. -->
-      <a-image id="myimg_1" src=""></a-image>
+      <a-image id="myimg_1" height="9" width="16" src=""></a-image>
       <a-image id="myimg_2" src=""></a-image>
       <a-image id="myimg_3" src=""></a-image>
       <a-entity mixin="marker" position="-2.5 0.7 0.01" rotation="" scale="" visible="" geometry="" material=""></a-entity>
