--- a/templates/newlife.html
+++ b/templates/newlife.html
@@ -2,8 +2,9 @@
 <meta charset="utf-8">
 <title>VR ideas</title>
 <head>
-    S
+
     <link rel="stylesheet" href="../static/css/style.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
     <script src="http://rawgit.com/dbradleyfl/aframe-gridhelper/master/dist/aframe-gridhelper-component.min.js"></script>
 
@@ -13,15 +14,15 @@
 
 <a-scene>
       <!-- Image links. -->
-      <a-assets>
-        <!-- <img id="myimg_1" src=""> -->
+      <!-- <a-assets>
+        <! <img id="myimg_1" src=""> -->
         <!-- <img id="myimg_2" src=""> -->
         <!-- <img id="myimg_3" src=""> -->
-      </a-assets>
+      <!-- </a-assets> -->
 
-      <a-image id="myimg_1" src="" height="9" width="16"  position=" 1 0.5 3" rotation="0 45 0"></a-image>
-      <a-image id="myimg_2" src="" height="9" width="16"  position=" 10 0.5 3" rotation="0 45 0"></a-image>
-      <a-image id="myimg_3" src="" height="9" width="16"  position=" 1 11.5 3" rotation="0 45 0"></a-image>
+      <a-image id="myimg_1" src="" height="3" width="4"  position=" 1 0.5 3" rotation="0 45 0"></a-image>
+      <a-image id="myimg_2" src="" height="9" width="16"  position=" 10 0.5 1" rotation="0 45 0"></a-image>
+      <a-image id="myimg_3" src="" height="9" width="16"  position=" 20 11.5 5" rotation="0 45 0"></a-image>
       <a-entity mixin="marker" position="-2.5 0.7 0.01"></a-entity>
       <a-sky color="#6EBAA7"></a-sky>
       <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
@@ -46,7 +47,6 @@
         <!-- <a-entity template="src: #link" data-src="#cubes" data-thumb="#cubes-thumb"></a-entity> -->
       <!-- </a-entity> -->
       <!-- Camera + cursor. -->
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
       <script src="../static/js/set-image.js"></script>
 </a-scene>
 
