--- a/templates/newlife.html
+++ b/templates/newlife.html
@@ -20,14 +20,14 @@
         <!-- <img id="myimg_3" src=""> -->
       <!-- </a-assets> -->
 
-      <a-image id="myimg_1" src="" height="3" width="4"  position="1 0.5 3" rotation="0 135 0"></a-image>
+      <a-image id="myimg_1" src="" height="3" width="4"  position="1 10.5 3" rotation="0 135 0"></a-image>
       <a-image id="myimg_2" src="" height="9" width="16"  position="1 0.5 1" rotation="0 45 0"></a-image>
-      <a-image id="myimg_3" src="" height="9" width="16"  position="1 11.5 5" rotation="0 225 0"></a-image>
+      <a-image id="myimg_3" src="" height="9" width="16"  position="1 0.5 -5" rotation="0 135 0"></a-image>
       <a-entity mixin="marker" position="-2.5 0.7 0.01"></a-entity>
       <a-sky color="#6EBAA7"></a-sky>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+      <!-- <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box> -->
+      <!-- <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere> -->
+      <!-- <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder> -->
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
       <a-sky color="#ECECEC"></a-sky>
       <a-entity position="0 0 0"><a-text id="mytext" color="blue" class="mytext" value="Hello World;"></a-text></a-entity>
