--- a/templates/room.html
+++ b/templates/room.html
@@ -13,9 +13,9 @@
     position="0 0 0"
     material="opacity: 0.5; side: double; offset: [object Object]; repeat: [object Object]; ambientOcclusionTextureOffset: [object Object]; ambientOcclusionTextureRepeat: [object Object]; displacementTextureOffset: [object Object]; displacementTextureRepeat: [object Object]; fog: false; normalScale: [object Object]; normalTextureOffset: [object Object]; normalTextureRepeat: [object Object]">
 </a-entity>
-<a-sky color="#ECECEC" position="" rotation="" scale="" visible="" material="" geometry="depth: 50; height: 50; width: 50"></a-sky>
-<a-entity position="0 0 0" scale="5.0 5.0 5.0" light="color: #ffffff; groundColor: #c0c0c0; type: point" visible="false">
-<a-camera position="0 0 0" rotation="" scale="" visible="" camera="" look-controls="" wasd-controls="fly: true" acceleration="50"></a-camera>
+<a-sky color="#ECECEC" position="" rotation="" scale="" visible="" material="" geometry="depth: 10; height: 10; width: 10"></a-sky>
+<a-entity position="0 0 0" scale="1.0 1.0 1.0" light="color: #ffffff; groundColor: #c0c0c0; type: point" visible="false">
+<a-camera camera="active:false;userHeight:1.6" wasd-controls="fly:true" acceleration="60" look-controls="" position="" rotation="-88.052 -20.387 -0.660" scale="1 1 1"></a-camera>
 </a-entity>
 <a-box position="-0.3 0.3 0.3" scale="0.1 0.1 0.1" material="offset: [object Object]; repeat: [object Object]; ambientOcclusionTextureOffset: [object Object]; ambientOcclusionTextureRepeat: [object Object]; color: #4CC3D9; displacementTextureOffset: [object Object]; displacementTextureRepeat: [object Object]; normalScale: [object Object]; normalTextureOffset: [object Object]; normalTextureRepeat: [object Object]" ></a-box>
 </a-scene>
