--- a/templates/newlife.html
+++ b/templates/newlife.html
@@ -23,9 +23,9 @@
       <!-- <a-image id="myimg_1" src="" height="3" width="4"  position="1 10.5 3" rotation="0 135 0"></a-image>
       <a-image id="myimg_2" src="" height="9" width="16"  position="0 0.5 6" rotation="0 45 0"></a-image>
       <a-image id="myimg_3" src="" height="9" width="16"  position="1 0.5 -6" rotation="0 135 0"></a-image> -->
-      <a-box id="myimg_1" src="" depth="4" height="4" width="4" position="1 0.5 3" rotation="0 135 0"></a-box>
-      <a-box id="myimg_2" src="" depth="4" height="4" width="4" position="0 0.5 6" rotation="0 45 0"></a-box>
-      <a-box id="myimg_3" src="" depth="4" height="4" width="4" position="1 0.5 -6" rotation="0 135 0"></a-box>
+      <a-box id="myimg_1" src="" depth="4" height="4" width="4" position="0 0 0" rotation="0 0 0"></a-box>
+      <!-- <a-box id="myimg_2" src="" depth="4" height="4" width="4" position="0 0.5 6" rotation="0 45 0"></a-box>
+      <a-box id="myimg_3" src="" depth="4" height="4" width="4" position="1 0.5 -6" rotation="0 135 0"></a-box> -->
         <!-- Textured box. -->
         <!-- <a-box src="#texture"></a-box> -->
       <a-entity mixin="marker" position="-2.5 0.7 0.01"></a-entity>
