--- a/templates/newlife.html
+++ b/templates/newlife.html
@@ -20,7 +20,8 @@
       <a-sky color="#ECECEC"></a-sky>
       <a-entity position="0 0 0"><a-text id="mytext" color="blue" class="mytext" value="Hello World;"></a-text></a-entity>
 
-      <!-- Camera + cursor. -->
+    <!-- Camera + cursor. -->
+    <a-camera position="-1.5 0 0.01"></a-camera>
       <script src="../static/js/set-image.js"></script>
 </a-scene>
 
