--- a/templates/newlife.html
+++ b/templates/newlife.html
@@ -22,7 +22,7 @@
 
     <!-- Camera + cursor. -->
     <a-camera position="0 0 15">
-        <a-cursor 
+        <a-cursor fuse="true" fuseTimeout="10"
                 position="0 0 -1"
                 geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
                 material="color: black; shader: flat">
