manage cursor -final

--- a/templates/newlife.html
+++ b/templates/newlife.html
@@ -21,11 +21,11 @@
       <a-entity position="0 0 0"><a-text id="mytext" color="blue" class="mytext" value="Hello World;"></a-text></a-entity>
 
     <!-- Camera + cursor. -->
-    <a-camera position="0 0 15">
-        <a-cursor fuse="true" fuseTimeout="10"
+    <a-camera position="0 0 20">
+        <a-cursor fuse="true" fuseTimeout="5"
                 position="0 0 -1"
-                geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
-                material="color: black; shader: flat">
+                geometry="primitive: ring; radiusInner: 0.01; radiusOuter: 0.02"
+                material="color: blue; shader: flat">
         </a-cursor>
     </a-camera>
     <script src="../static/js/set-image.js"></script>
