--- a/templates/newlife.html
+++ b/templates/newlife.html
@@ -15,7 +15,7 @@
       <!-- <a-box id="myimg_1" src="" depth="4" height="4" width="4" position="-12 12 0" rotation="0 0 0"></a-box> -->
 
       <a-entity mixin="marker" position="-2.5 0.7 0.01"></a-entity>
-      <a-sky color="#ffc460"></a-sky>
+      <a-sky color="#c8c8c8"></a-sky>
 
       <a-entity position="0 0 0"><a-text id="mytext" color="blue" class="mytext" value="Hello World;"></a-text></a-entity>
 
